fix(logo-alignment): correct logo alignment with page titles
- change styling for the tembea logo
[Fixes #165340281]

--- a/src/app/admin/admin/admin.component.css
+++ b/src/app/admin/admin/admin.component.css
@@ -1,4 +1,3 @@
-
 mat-sidenav-container, mat-sidenav {
   height: 100%;
 }
@@ -12,14 +11,15 @@ button:hover, button:focus {
 }
 
 mat-icon.logo {
-  height: 48px;
+  height: 35px;
   width: 100%;
-  margin: 1em;
+  padding-right: 55px;
 }
 
 mat-toolbar {
-  margin: 2em auto;
+  margin-top: 1em;
   background: transparent;
+  padding-bottom: 15%;
 }
 
 mat-sidenav-content > .mat-sidenav-content-div{
